# factplusplus

./: CMakeLists.txt  Makefile.include  README.md
FaCT++/: BSPO_Queries.h  CMakeLists.txt  FaCT.cpp  LUBM2_Queries.h  NCIT_Queries.h  PO_Queries.h  QA.cpp  comparser.h  comscanner.h  parser.cpp  parser.h  scanner.cpp
FaCT++.JNI/: Axioms.cpp  Expressions.cpp  FaCTPlusPlus.cpp  JNIActor.h  JNIMonitor.h  JNISupport.h  MemoryStat.cpp  Queries.cpp  SaveLoad.cpp  tJNICache.h
FaCT++.Java/: pom.xml
FaCT++.KE/: build.xml
FaCT++.OWLAPIv3/: build.xml
FaCT++.OWLAPIv3/src/uk/ac/manchester/cs/factplusplus/owlapiv3/: FaCTPlusPlusReasoner.java
FaCT++.ProtegeOWLAPIv3/: build.xml
FaCT++.ProtegeOWLAPIv3/lib/: version.txt
Kernel/: Actor.h  AtomicDecomposer.cpp  AtomicDecomposer.h  AxiomSplitter.h  Blocking.cpp  BuildDAG.cpp  CGLabel.h  CMakeLists.txt  CWDArray.cpp  CWDArray.h  CascadedCache.cpp  ConjunctiveQuery.cpp  ConjunctiveQueryFolding.cpp  ConjunctiveQuerySet.h  DLConceptTaxonomy.cpp  DLConceptTaxonomy.h  DataReasoning.h  DataTypeCenter.cpp  DataTypeCenter.h  DataTypeComparator.h  DepSet.h  ExtendedDataRange.cpp  ExtendedSyntacticLocalityChecker.h  GeneralSyntacticLocalityChecker.h  Incremental.cpp  Input.cpp  Kernel.cpp  Kernel.h  KnowledgeExplorer.cpp  KnowledgeExplorer.h  LeveLogger.h  LocalityChecker.h  Modularity.h  Preprocess.cpp  PriorityMatrix.h  ProgressIndicatorInterface.h  QR.h  RAutomaton.cpp  RAutomaton.h  Reasoner.cpp  (+104 more)
